# blog

./: .gitignore  LICENSE  README.md  goodreads_library_export.csv  pyproject.toml
config/: settings.py  urls.py
core/: goodreads_library_export.csv  utils.py  views.py
core/management/commands/: get_covers.py
core/posts/act/: cavalieres.md  edelweiss_france_fascisme.md  eldorado_1528.md  en_cas_de_peril_imminent.md  fabulatographe.md  je_mappelle_asher_lev.md  kill_fiction.md  la_grande_maree.md  la_mouche.md  le_moment_psychologique.md  le_songe_dune_nuit_dete.md  les_enchantements.md  les_memoires_de_paul_palandin.md  linsolent_roland_garros.md  ne_laisse_pas_ce_jour_vieillir.md  oasis_love.md  office.md  orgasme(s).md  salle_des_fetes.md  second_souffle.md  un_bon_job.md
core/posts/code/: 001_setup_django_tailwind_daisyui.md  002_render_md_with_tailwind_typography.md  003_define_custom_user.md  004_create_curvy_homepage.md  005_deploy_to_heroku.md  006_from_heroku_to_capRover.md  007_add_search_htmx.md  008_deploy_django_to_o2switch.md  009_setup_forget_password.md  010_django_cotton_alpinejs.md  011_django-ninja-nextjs.md  012_django-ninja-nextjs-auth.md  013_send_email_cloudflare_custom_domain.md  014_django_neon_railway.md  015_migrate_domain_cloudflare.md  016_django_moderation.md  016_ubuntu_server_arrs_stack.md
core/static/css/: codehilite.css  output.css
core/static/images/welcome/: to_webp.py
core/templates/core/: about.html  base.html  books.html  index.html  missing_post.html  post.html  posts.html
(+6 files in other folders)
