[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django-browser-reload>=1.18.0",
    "django-markdownify>=0.9.5",
    "django>=5.1.6",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "psycopg[binary,pool]>=3.2.5",
    "pygments>=2.19.1",
    "python-dotenv>=1.0.1",
    "python-frontmatter>=1.1.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "pillow>=11.3.0",
    "pygments>=2.19.1",
]
